# camilladsp

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile_armv6  Dockerfile_armv7  Dockerfile_armv8  FAQ.md  README.crates.md  README.md  backend_alsa.md  backend_coreaudio.md  backend_pipewire.md  backend_wasapi.md  build.rs  cert.pem  coefficients_from_wav.md  delaytest.yml  delaytest1.yml  delaytest2.yml  delaytest3.yml  delaytest4.yml  delaytest5.yml  delaytest6.yml  devices.md  ditherplay.py  filter.txt  filter_44100_2.txt  filter_broken.txt  filter_hp.txt  filterfunctions.md  firtest.yml  identity.pfx  key.pem  log.txt  makefircoeffs.py  race.graphml  restapi.md  rew.yml  (+12 more)
.cargo/: config.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: camilladsp-debugger.agent.md  camilladsp-docs-config.agent.md  camilladsp-maintainer.agent.md
.github/chatmodes/: camilladsp-debugger.chatmode.md  camilladsp-maintainer.chatmode.md
.github/workflows/: build_release.yml  check_ws_docs.yml  ci_test.yml  publish.yml  test_build.yml
benches/: conversions.rs  fftconv_kernels.rs  filters.rs  pipeline.rs
docs/: openapi.yaml
exampleconfigs/: all_biquads.yml  alsa_minimum.yml  alsa_resample.yml  brokenconfig.yml  ditherplay.yml  file_capt.yml  file_pb.yml  gainconfig.yml  lf_compressor.yml  nofilters.yml  nomixers.yml  nothing.yml  pulseconfig.yml  pulseconfig_changed.yml  pulseconfig_resample.yml  resample_file.yml  simpleconfig.yml  simpleconfig_ms.yml  simpleconfig_nofilt.yml  simpleconfig_plot.yml  simpleconfig_resample.yml  simpleconfig_temp.yml  someconfig.yml  stdio_capt.yml  stdio_inout.yml  stdio_pb.yml  test_file_nt.yml  tokens.yml
kladd/: 4way_mono.yml  F64-F64_SRC_44_48.yml  F64-F64_SRC_44_96.yml  all_biquads_bw.yml  cliptest.yml  db7.yml  delaybugtest.yml  delaytest.dbl  erbrps411.pcm  erbrps411b.pcm  firtest_yoga.yml  iir_rew_flattest.yml  iir_rew_test.yml  jack_jack.yml  loops_duplex.yml  loops_nametest.yml  loops_wavconv.yml  maxtest.yml  performance.md  pulse_jack.yml  relativetest.yml  resample_multi1.yml  simple_jack.yml  simple_stdin_loop.yml  simple_stdin_null.yml  simple_stdin_stdout.yml  simple_yoga.yml  simple_yoga_fail.yml  simple_yoga_fail_cap.yml  simple_yoga_file.yml  simple_yoga_filetofile.yml  simple_yoga_filetostdout.yml  simple_yoga_loops.yml  simple_yoga_loops_8ch.yml  simple_yoga_loops_noblock.yml  simple_yoga_loops_skipchannels.yml  simple_yoga_loudness.yml  simple_yoga_mutetest.yml  simple_yoga_plugloops.yml  simple_yoga_pw.yml  (+21 more)
loudness/: contours.csv  plotcontours.py  plotcontours_readmefig.py  plotcontours_shelf.py  rme_datasets.csv  wpd_project.tar
scripts/: gen_ws_docs.py  ws_groups.yaml  ws_template.md.j2
src/: alsadevice.rs  alsadevice_buffermanager.rs  alsadevice_utils.rs  asiodevice.rs  asiodevice_utils.rs  audiochunk.rs  audiodevice.rs  basicfilters.rs  bin.rs  biquad.rs  biquadcombo.rs  biquadconfig.yml  brokenconfig.yml  compressor.rs  config.rs  conversions.rs  coreaudiodevice.rs  countertimer.rs  cpaldevice.rs  diffeq.rs  dither.rs  engine.rs  fftconv.rs  fftconv_fftw.rs  fifoqueue.rs  filedevice.rs  filedevice_bluez.rs  filereader.rs  filereader_nonblock.rs  filters.rs  gainconfig.yml  generatordevice.rs  helpers.rs  lib.rs  limiter.rs  loudness.rs  main.rs  mixer.rs  noisegate.rs  pipeline.rs  (+18 more)
src/alsa_backend/: buffermanager.rs  device.rs  mod.rs  threaded_buffermanager.rs  threaded_device.rs  utils.rs
src/asio_backend/: device.rs  mod.rs  utils.rs
src/config/: mod.rs  utils.rs
src/coreaudio_backend/: device.rs
src/cpal_backend/: device.rs  mod.rs
src/file_backend/: bluez.rs  device.rs  filereader.rs  filereader_nonblock.rs  mod.rs
src/filters/: basicfilters.rs  biquad.rs  biquadcombo.rs  diffeq.rs  dither.rs  fftconv.rs  fftconv_avx.rs  fftconv_neon.rs  limiter.rs  lookahead_limiter.rs  loudness.rs  mod.rs
src/pipewire_backend/: device.rs
src/processors/: compressor.rs  mod.rs  noisegate.rs  race.rs
src/pulse_backend/: device.rs
src/utils/: conversions.rs  countertimer.rs  decibels.rs  helpers.rs  mod.rs  rate_controller.rs  resampling.rs  ringbuffer.rs  stash.rs  time.rs  wavtools.rs
src/wasapi_backend/: capabilities.rs  device.rs  mod.rs
src/websocket_server/: datastructures.rs  mod.rs  utils.rs
testdata/: float32.raw  float64.raw  int16.raw  int24.raw  int243.raw  int32.raw  text.txt  text_header.txt
tests/: rest_api.rs
testscripts/: analyze_wav.py  fft_file.py  fft_file_temp.py  get_device_capabilities.py  log_load_and_level.py  makefircoeffs.py  makerawspike.py  makesineraw.py  play_wav.py  signal_level_subscriber.py  sineraw_stdout.py  spectrum_analyzer.py  state_subscriber.py  test_biquad.py  test_file.yml  test_file_sine.yml
testscripts/config_load_test/: conf1.yml  conf2.yml  conf3.yml  conf4.yml  test_set_config.py
web/: camilla.html  reacttest.html
