[package]
name = "camilladsp"
version = "3.0.0"
authors = ["Henrik Enquist <henrik.enquist@gmail.com>"]
edition = "2021"
description = "A flexible tool for processing audio"
rust-version = "1.74"

[features]
default = ["websocket"]
pulse-backend = ["libpulse-simple-binding", "libpulse-binding"]
cpal-backend = ["cpal"]
jack-backend = ["cpal-backend", "cpal/jack"]
asio-backend = ["cpal-backend", "cpal/asio"]
bluez-backend = ["zbus"]
32bit = []
websocket = ["tungstenite"]
secure-websocket = ["websocket", "native-tls", "tungstenite/native-tls"]
FFTW = ["fftw"]
debug = []
avoid-rustc-issue-116359 = []

[lib]
name = "camillalib"
path = "src/lib.rs"

[[bin]]
name = "camilladsp"
path = "src/bin.rs"

[target.'cfg(target_os="linux")'.dependencies]
alsa = "0.9.0"
alsa-sys = "0.3.1"
nix = { version = "0.28", features = ["poll", "signal"] }
zbus = { version = "3.0.0", optional = true }

[target.'cfg(target_os="macos")'.dependencies]
#coreaudio-rs = { path = "../coreaudio-rs" }
#coreaudio-rs = { git = "https://github.com/HEnquist/coreaudio-rs", tag="v0.11.1-rc1" }
coreaudio-rs = "0.11.1"
dispatch = "0.2.0"

[target.'cfg(target_os="windows")'.dependencies]
#wasapi = { path = "../../rust/wasapi" }
#wasapi = { git = "https://github.com/HEnquist/wasapi-rs", branch = "win041" }
wasapi = "0.14.0"
windows = {version = "0.51.0", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
serde_with = "1.11"
realfft = "3.0.0"
#realfft = { git = "https://github.com/HEnquist/realfft", branch = "better_errors" }
fftw = { version = "0.8.0", optional = true }
num-complex = "0.4"
num-traits = "0.2"
signal-hook = "0.3.8"
rand = { version = "0.8.3", default-features = false, features = ["small_rng", "std"] }
rand_distr = "0.4.3"
clap = { version = "4.5.4", features = ["cargo"] }
lazy_static = "1.4.0"
log = "0.4.14"
flexi_logger = { version = "0.27.2", features = ["async", "colors"] }
chrono = "0.4"
tungstenite = { version = "0.21.0", optional = true }
native-tls = { version = "0.2.7", optional = true }
libpulse-binding = { version = "2.0", optional = true }
libpulse-simple-binding = { version = "2.0", optional = true }
rubato = "0.15.0"
#rubato = { git = "https://github.com/HEnquist/rubato", branch = "optional_fft" }
cpal = { version = "0.15.3", optional = true }
#rawsample = { path = "../../rust/rawsample" }
#rawsample = { git = "https://github.com/HEnquist/rawsample", branch = "main" }
rawsample = "0.2.0"
circular-queue = "0.2.6"
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
crossbeam-channel = "0.5"

[build-dependencies]
version_check = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filters"
harness = false

[profile.release]
codegen-units = 1
