[package]
name = "CamillaDSP"
version = "4.0.0-draft"
authors = ["Henrik Enquist <henrik.enquist@gmail.com>"]
edition = "2021"
description = "A flexible tool for processing audio"
rust-version = "1.74"

[features]
default = ["websocket"]
pulse-backend = ["libpulse-simple-binding", "libpulse-binding"]
cpal-backend = ["cpal"]
jack-backend = ["cpal-backend", "cpal/jack"]
bluez-backend = ["zbus"]
32bit = []
websocket = ["tungstenite"]
secure-websocket = ["websocket", "native-tls", "tungstenite/native-tls"]
debug = []
avoid-rustc-issue-116359 = []

[lib]
name = "camillalib"
path = "src/lib.rs"

[[bin]]
name = "camilladsp"
path = "src/bin.rs"

[target.'cfg(target_os="linux")'.dependencies]
alsa = "0.9.0"
alsa-sys = "0.3.1"
nix = { version = "0.28", features = ["poll", "signal"] }
zbus = { version = "3.0.0", optional = true }

[target.'cfg(target_os="macos")'.dependencies]
#coreaudio-rs = { path = "../coreaudio-rs" }
#coreaudio-rs = { git = "https://github.com/HEnquist/coreaudio-rs", tag="v0.11.1-rc1" }
coreaudio-rs = "0.11.1"
dispatch = "0.2.0"

[target.'cfg(target_os="windows")'.dependencies]
#wasapi = { path = "../../rust/wasapi" }
#wasapi = { git = "https://github.com/HEnquist/wasapi-rs", branch = "win041" }
wasapi = "0.16.0"
windows = {version = "0.59.0", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
serde_with = "1.11"
realfft = "3.4.0"
#realfft = { git = "https://github.com/HEnquist/realfft", branch = "better_errors" }
num-complex = "0.4"
num-traits = "0.2"
signal-hook = "0.3.8"
rand = { version = "0.8.3", default-features = false, features = ["small_rng", "std"] }
rand_distr = "0.4.3"
clap = { version = "4.5.4", features = ["cargo"] }
lazy_static = "1.4.0"
log = "0.4.14"
flexi_logger = { version = "0.29.8", features = ["async", "colors"] }
chrono = "0.4"
tungstenite = { version = "0.26.1", optional = true }
native-tls = { version = "0.2.7", optional = true }
libpulse-binding = { version = "2.0", optional = true }
libpulse-simple-binding = { version = "2.0", optional = true }
#rubato = "0.16.1"
rubato = { git = "https://github.com/HEnquist/rubato", branch = "adapter_v2" }
cpal = { version = "0.13.3", optional = true }
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
crossbeam-channel = "0.5"
rayon = "1.10.0"
audio_thread_priority = { version = "0.32.0", default-features = false }
ringbuf = "0.4.7"
audioadapter = { version = "0.3.0", default-features = false, features = ["std"] }

[build-dependencies]
version_check = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filters"
harness = false

[[bench]]
name = "conversions"
harness = false

[profile.release]
codegen-units = 1
