[package]
name = "CamillaDSP"
version = "4.0.0-draft"
authors = ["Henrik Enquist <henrik.enquist@gmail.com>"]
edition = "2024"
description = "A flexible tool for processing audio"
rust-version = "1.85"
license = "GPL-3.0-only OR MPL-2.0"

[features]
default = ["websocket"]
pulse-backend = ["libpulse-simple-binding", "libpulse-binding"]
pipewire-backend = ["pipewire"]
cpal-backend = ["cpal"]
jack-backend = ["cpal-backend", "cpal/jack"]
bluez-backend = ["zbus"]
32bit = []
websocket = ["tungstenite"]
secure-websocket = ["websocket", "native-tls", "tungstenite/native-tls"]
debug = []
avoid-rustc-issue-116359 = []

[lib]
name = "camillalib"
path = "src/lib.rs"

[[bin]]
name = "camilladsp"
path = "src/bin.rs"

[target.'cfg(target_os="linux")'.dependencies]
alsa = "0.9.0"
alsa-sys = "0.3.1"
nix = { version = "0.30", features = ["poll", "signal"] }
zbus = { version = "5.7.0", optional = true }
pipewire = { version = "0.8", optional = true }

[target.'cfg(target_os="macos")'.dependencies]
coreaudio-rs = "0.13.0"
objc2-core-audio = "0.3.1"
objc2-core-audio-types = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-audio-toolbox = "0.3.1"
dispatch = "0.2.0"
libc = "0.2.172"

[target.'cfg(windows)'.dependencies]
wasapi = "0.22.0"
# wasapi = { version = "0.22.0", path = "../wasapi-rs" }
windows = {version = "0.62.0", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
serde_with = "3.12"
json-patch = "4.0.0"
realfft = "3.4.0"
#realfft = { git = "https://github.com/HEnquist/realfft", branch = "better_errors" }
num-complex = "0.4"
num-traits = "0.2"
signal-hook = "0.3.8"
rand = { version = "0.9.1", default-features = false, features = ["small_rng", "std", "os_rng"] }
rand_distr = "0.5.1"
clap = { version = "4.5.4", features = ["cargo"] }
lazy_static = "1.4.0"
log = "0.4.14"
flexi_logger = { version = "0.30.2", features = ["async", "colors"] }
chrono = "0.4"
tungstenite = { version = "0.26.1", optional = true }
native-tls = { version = "0.2.7", optional = true }
libpulse-binding = { version = "2.0", optional = true }
libpulse-simple-binding = { version = "2.0", optional = true }
rubato = "1.0"
#rubato = { git = "https://github.com/HEnquist/rubato", branch = "preview_1.0" }
cpal = { version = "0.16.0", optional = true }
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
crossbeam-channel = "0.5"
rayon = "1.10.0"
audio_thread_priority = { version = "0.33.0", default-features = false }
ringbuf = "0.4.7"
#audioadapter = { version = "2.0.0", default-features = false, path = "../audioadapter-rs/audioadapter" }
#audioadapter-sample = { version = "2.0.0", default-features = false,path = "../audioadapter-rs/audioadapter-sample" }
#audioadapter-buffers = { version = "2.0.0", path = "../audioadapter-rs/audioadapter-buffers" }
audioadapter = { version = "2.0.0", default-features = false }
audioadapter-sample = { version = "2.0.0", default-features = false }
audioadapter-buffers = { version = "2.0.0" }

[build-dependencies]
version_check = "0.9"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "filters"
harness = false

[[bench]]
name = "conversions"
harness = false

[profile.release]
codegen-units = 1
